--- a/Klimaktoplan-kz/index-ru.html
+++ b/Klimaktoplan-kz/index-ru.html
@@ -21,7 +21,7 @@
           <li><a class="translated-text navmenu" key="g1" href="#k1">О продукте</a></li>
           <li><a class="translated-text navmenu" key="g2" href="#k2">Преимущества</a></li>
           <li><a class="translated-text navmenu" key="g4" href="#k4">Состав</a></li>
-          <li><a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a></li>
+          <!-- <li><a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a></li> -->
           <!-- <li><a class="translated-text navmenu" key="g4" href="faq.html">Вопросы</a></li> -->
           <li><a class="translated-text buy-btn" key="g5" href="#k3">Где купить?</a></li>
           <li>
@@ -34,7 +34,7 @@
       <a class="translated-text navmenu" key="g1" href="#k1">О продукте</a>
       <a class="translated-text navmenu" key="g2" href="#k2">Преимущества</a>
       <a class="translated-text navmenu" key="g4" href="#k4">Состав</a>
-      <a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a>
+      <!-- <a class="translated-text navmenu" key="g3" href="./usage.html">Инструкция по применению</a> -->
       <!-- <a class="translated-text navmenu faq" key="g4" href="faq.html"></a> -->
       <a class="translated-text buy-btn" key="g5" href="#k3">Где купить?</a>
       <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index.html"><p>  KZ</p></a>
