--- a/Klimaktoplan-kz/index.html
+++ b/Klimaktoplan-kz/index.html
@@ -21,7 +21,7 @@
           <li><a class="translated-text navmenu" key="g1" href="#k1">Өнім туралы</a></li>
           <li><a class="translated-text navmenu" key="g2" href="#k2">Артықшылықтары</a></li>
           <li><a class="translated-text navmenu" key="g4" href="#k4">Құрамы</a></li>
-          <li><a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a></li>
+          <!-- <li><a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a></li> -->
           <!-- <li><a class="translated-text navmenu" key="g4" href="faq.html">Вопросы</a></li> -->
           <li><a class="translated-text buy-btn" key="g5" href="#k3">Қайдан сатып алуға болады?</a></li>
           <li>
@@ -34,7 +34,7 @@
       <a class="translated-text navmenu" key="g1" href="#k1">Өнім туралы</a>
       <a class="translated-text navmenu" key="g2" href="#k2">Артықшылықтары</a>
       <a class="translated-text navmenu" key="g4" href="#k4">Құрамы</a>
-      <a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a>
+      <!-- <a class="translated-text navmenu" key="g3" href="./usage.html">Қолдану нұсқаулығы</a> -->
       <!-- <a class="translated-text navmenu faq" key="g4" href="faq.html"></a> -->
       <a class="translated-text buy-btn" key="g5" href="#k3">Қайдан сатып алуға болады?</a>
       <a class="lang lang-dop"><b>KZ</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
