--- a/Klimaktoplan-kz/index.html
+++ b/Klimaktoplan-kz/index.html
@@ -181,9 +181,9 @@ E-mail: info.kazakhstan@alpenpharma.com<br>
     </p>
     <a  class="disclamer__alpen" href="http://alpenpharma.com"></a>
   </div>
-  <div class="disclamer-warning">
+<!--   <div class="disclamer-warning">
     <p>ӨЗІН-ӨЗІ ЕМДЕУ ДЕНСАУЛЫҒЫҢЫЗҒА ҚАУІПТІ БОЛУЫ МҮМКІН </p>
-  </div>
+  </div> -->
 
 
 
