--- a/influcid-LT/index.html
+++ b/influcid-LT/index.html
@@ -20,19 +20,19 @@ var content = {
     man: [
       {
       selector: 'body > header > div.main-img-container',
-      content: '<img src="/upload/medialibrary/f47/influcid_main_02_first_desctop_AM.jpg">'
+      content: '<img src= "/upload/medialibrary/f47/influcid_main_02_first_desctop_AM.jpg">'
       }
     ]
 };
  
 function replacer(content) {
-    var utm = /utm_replace=([^&]*)/g.exec(document.URL); 
+    var utm = content; 
     if (utm in content) {
         for (i in content[utm]) {
           document.querySelector(content[utm][i]['selector']).innerHTML=content[utm][i]['content'];
         };
     } else {
-        console.log("Каталог контента не имеет такой utm метки");
+        console.log('Каталог контента не имеет такой utm метки');
     };
 };
 replacer(content);
