--- a/Tansilotren-Moldova/index.html
+++ b/Tansilotren-Moldova/index.html
@@ -376,7 +376,7 @@
                 <h4>Despre  <br><b>Tonsilotren</b></h4>
                 <p><b>Produs în Germania din 1935. </b>
 
-                    Nu este nevoie să pastila, este bună la gust și, se dizolvă în cavitatea bucală.
+                    Nu este nevoie să înghițiți pastila, este bună la gust și, se dizolvă în cavitatea bucală.
 
                     Pentru tratamentul copiilor sub vârsta de 3 ani, se recomandă dizolvarea comprimatului într-o cantitate mică de apă (de exemplu, într-o linguriță).
 
