--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			<a href="SwissPharm/index.html">SwissPharm</a>
 			<a href="prospan-by/index.html">prospan-by</a>
 			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
+			<a href="umkalor/index.html">umkalor</a>
 			
 		</section>
 	</main>
@@ -220,6 +221,9 @@
 	}
 	a:nth-child(44)::before {
 		background: url("./Klimaktoplan-kz/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(45)::before {
+		background: url("./umkalor/logo.svg")no-repeat center / contain;
 	}
 </style>
 
