--- a/umkalor/index-ru.html
+++ b/umkalor/index-ru.html
@@ -20,14 +20,14 @@
     <div class="outer-navigation-container">
         <div class="navigation-container">
             <a class="logo-container" href="#top"></a>
-            <a class="where-to-buy-mob" href="#block-6">ДЕ КУПИТИ </a>
+            <a class="where-to-buy-mob" href="#block-6">ГДЕ КУПИТЬ</a>
             <div class="navigation-menu">
-                <a class="navmenu" href="#block-1" >ПЕРЕВАГИ </a>
-                <a class="navmenu" href="#block-2">ЯК ПРИЙМАТИ </a>
-                <a class="navmenu" href="#block-3">ПОРАДИ</a>
+                <a class="navmenu" href="#block-1" >ПРЕИМУЩЕСТВА </a>
+                <a class="navmenu" href="#block-2">КАК ПРИНИМАТЬ </a>
+                <a class="navmenu" href="#block-3">СОВЕТЫ</a>
 
-                <a class=" where-to-buy" href="#block-6">ДЕ КУПИТИ </a>
-                <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
+                <a class=" where-to-buy" href="#block-6">ГДЕ КУПИТЬ</a>
+                <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index.html"><p>  UA</p></a>
             </div>
 
             <!--        mobile menu-->
@@ -37,20 +37,20 @@
                     <input class="this-inpt" type="checkbox" /> <span></span> <span></span> <span></span>
                     <ul id="menu">
                         <li>
-                            <a class="navmenu menuLi menuLi1" href="#block-1">ПЕРЕВАГИ</a>
+                            <a class="navmenu menuLi menuLi1" href="#block-1">ПРЕИМУЩЕСТВА</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi menuLi2" href="#block-2">ЯК ПРИЙМАТИ </a>
+                            <a class="navmenu menuLi menuLi2" href="#block-2">КАК ПРИНИМАТЬ</a>
                         </li>
                         <li>
-                            <a class="navmenu menuLi menuLi3" href="#block-3">ПОРАДИ</a>
+                            <a class="navmenu menuLi menuLi3" href="#block-3">СОВЕТЫ</a>
                         </li>
 
 <!--                        <li>-->
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-                            <a class="lang lang-dop"><b>UA</b></a><a class="lang" href="index-ru.html"><p>  RU</p></a>
+                            <a class="lang lang-dop"><b>RU</b></a><a class="lang" href="index.html"><p>  UA</p></a>
                         </li>
                     </ul>
                 </div>
@@ -62,7 +62,7 @@
     </div>
 
 <a target="_blank" class="instruction" href="./instruction.pdf">
-            <p class="translated-text" key="instruction">Інструкція</p>
+            <p class="translated-text" key="instruction">Инструкция</p>
       </a>
 
 <!--    end navigation-->
@@ -81,7 +81,7 @@
             <div class='block-1_center-container'>
                 <div class='block-1_center-image-top'></div>
                 <div class='block-1_center-image-bottom'></div>
-                <p>ПРИ ГОСТРИХ І ХРОНІЧНИХ ІНФЕКЦІЙ ДИХАЛЬНИХ ШЛЯХІВ І ЛОР-ОРГАНІВ</p>
+                <p>ПРИ ОСТРЫХ И ХРОНИЧЕСКИХ ИНФЕКЦИЯХ ДЫХАТЕЛЬНЫХ ПУТЕЙ И ЛОР-ОРГАНОВ</p>
             </div>
             <div class='block-1_center-image-right'></div>
         </div>
@@ -89,15 +89,15 @@
 
     <div class="block-2">
         <div class="block-2_container">
-            <h3>Які ускладнення<br>застуди можуть бути?</h3>
+            <h3>Какие осложнения<br>простуды могут быть?</h3>
             <div class='block-2_plate-container'>
                 <div class='block-2_plate'>
                     <div class="block-2_plate-img"></div>
-                    <p>БРОНХІТ<br>ПНЕВМОНІЯ</p>
+                    <p>БРОНХИТ<br>ПНЕВМОНИЯ</p>
                 </div>
                 <div class='block-2_plate'>
                     <div class="block-2_plate-img"></div>
-                    <p>ТОНЗИЛІТ<br>ЛАРИНГІТ<br>ТРАХЕЇТ</p>
+                    <p>ТОНЗИЛЛИТ<br>ЛАРИНГИТ<br>ТРАХЕИТ</p>
                 </div>
                 <div class='block-2_plate'>
                     <div class="block-2_plate-img"></div>
@@ -112,11 +112,11 @@
     <div class="block-3">
         <div class="block-3_container">
             <div>
-                <h4>Моє ім’я Лора*<br> і я відкрию Вам <span>світ УМКАЛОРа</span></h4>
+                <h4>Моё имя Лора*<br> и я открою Вам <span>мир УМКАЛОРа</span></h4>
                 <div class="underline"></div>
-                <p>Я щаслива жінка, дружина та мати. Якщо хтось у сім’ї захворів, то до кого всі звертаються?</p>
-                <p>Обираю завжди все натуральне, перевірене часом та клінічними дослідженнями. Тому спершу детально все аналізую та прискіпливо вивчаю.  </p>
-                <p><span>Головне моє правило – не затягуй!</span> Пропоную не доводити до ускладнень та жити легко! </p>
+                <p>Я счастливая женщина, жена и мать. Если кто-то в семье заболел, то к кому все обращаются?</p>
+                <p>Выбираю всегда все натуральное, проверенное временем и клиническими исследованиями. Поэтому сначала детально все анализирую и тщательно изучаю.</p>
+                <p><span>Главное мое правило - не затягивай!</span> Предлагаю не доводить до осложнений и жить легко!</p>
             </div>
             <div class="block-3_woman"></div>
 
@@ -127,12 +127,12 @@
         <div class="bullet-block">
             <h3>Умкалор</h3>
             <div class="bullet-block_container">
-                <p><span>Безпечний фітобіотик</span> та найбільш досліджений фітопрепарат при застуді для всієї родини</p>
-                <p>Своєчасне приймання зменшує<span> необхідність у застосуванні антибіотиків¹</span></p>
-                <p><span>Прискорює процес виведення мокротиння</span> з бронхів та слизу з носових пазух і ходів, запобігаючи розвитку застійних явищ² ³</p>
-                <p>Оригінальний запатентований екстракт пеларгонії<span> Pelargonium sidoides EPs® 7630</span>аутентичного походження</p>
-                <p><span>70 років виробництва </span> в Німеччині з 1950 року</p>
-                <p><span>3 лікарські форми.</span> Сироп, розчин, таблетки. Для дітей та дорослих.</p>
+                <p><span>Безопасный фитобиотик</span> и наиболее исследованный фитопрепарат при простуде для всей семьи</p>
+                <p>Своевременное применение уменьшает<span> необходимость в приеме антибиотиков¹</span></p>
+                <p><span>Ускоряет процесс выведения мокроты</span> из бронхов и слизи из носовых пазух и ходов, предотвращая развитие застойных явлений² ³</p>
+                <p>Оригинальный запатентованный экстракт пеларгонии<span> Pelargonium sidoides EPs® 7630</span>аутентичного происхождения</p>
+                <p><span>70 лет производства</span> в Германии с 1950 года</p>
+                <p><span>3 лекарственные формы.</span> Сироп, раствор, таблетки. Для детей и взрослых.</p>
             </div>
         </div>
     </div>
@@ -143,16 +143,16 @@
         <div class="block-4_container">
             <div class="block-4_woman"></div>
             <div class="block-4_text">
-                <h4><span>TURBOта про рідних –</span> для мене це не просто звук. </h4>
+                <h4><span>ЗАБОТА о близких –</span> для меня это не просто звук</h4>
                 <div class="underline"></div>
-                <p>І саме зараз на мою допомогу чекають батьки. Тому  по дорозі придбала гарний теплий плед на подарунок та, звісно, ліки. Тато з мамою дуже схожі, але не у виборі лікарської форми.</p>
-                <p>Мама полюбляє все відмірювати краплями, а тато обирає завжди, як і моя дитина, смачний сироп. Мені ж з чоловіком простіше випити таблетку.</p>
+                <p>И именно сейчас моей помощи ждут родители. Поэтому по дороге приобрела хороший теплый плед на подарок и, конечно, лекарства. Папа с мамой очень похожи, но не в выборе лекарственной формы.</p>
+                <p>Мама любит все отмерять каплями, а папа выбирает всегда, как и мой ребенок, вкусный сироп. Мне и  ужу проще выпить таблетку. </p>
             </div>
         </div>
         <div class="puppet">
             <a name="block-2"></a>    
         </div>
-        <h3>Як приймати Умкалор? </h3>
+        <h3>Как принимать Умкалор? </h3>
         <div class="btns-container">
             <div class="btn-prep btn-prep-1 active-prep">
                 <p>КАПЛИ</p>
@@ -164,34 +164,34 @@
                 <p>ТАБЛЕТКИ</p>
             </div>
         </div>
-        <p class="how-to-text"><span>КАПЛИ слід приймати </span> з невеликою кількістю рідини за 30 хвилин до їди вранці, вдень і ввечері.</p>
+        <p class="how-to-text"><span>КАПЛИ следует принимать</span> с небольшим количеством жидкости за 30 минут до еды утром, днем ​и вечером.</p>
         <div class="dosage">
             <div class="product-img"></div>
             <div class="dosage-inform">
                 <div class="dosage_container"> 
                     <div class="dosage_container-img"></div>
                     <div>
-                        <span>дітям віком від 1 до 6 років:</span>
-                        <p class="dosage_container-text1">по 10 крапель 3 рази на добу;</p>
+                        <span>детям в возрасте от 1 до 6 лет:</span>
+                        <p class="dosage_container-text1">по 10 капель 3 раза в сутки;</p>
                     </div>
                 </div>
                 <div class="dosage_container">
                     <div class="dosage_container-img"></div>
                     <div>
-                        <span>дітям віком від 6 до 12 років:</span>
-                        <p class="dosage_container-text2">по 20 крапель 3 рази на добу;</p>
+                        <span>детям в возрасте от 6 до 12 лет:</span>
+                        <p class="dosage_container-text2">по 20 капель 3 раза в сутки;</p>
                     </div>
                 </div>
                 <div class="dosage_container">
                     <div class="dosage_container-img"></div>
                     <div>
-                        <span>дорослим і дітям віком від 12 років:</span>
-                        <p class="dosage_container-text3">по 30 крапель 3 рази на добу;</p>
+                        <span>взрослым и детям старше 12 лет:</span>
+                        <p class="dosage_container-text3">по 30 капель 3 раза в сутки;</p>
                     </div>
                 </div>
                 <div>
-                    <p>Середня тривалість лікування препаратом Умкалор 7-10 днів.</p>
-                    <p>Застосування препарату Умкалор у дітей від 1 до 6 років рекомендується під наглядом лікаря. </p>
+                    <p>Средняя продолжительность лечения Умкалор 7-10 дней.</p>
+                    <p>Применение препарата Умкалор у детей от 1 до 6 лет рекомендуется под наблюдением врача. </p>
                 </div>
 
             </div>
@@ -207,35 +207,36 @@
     <div class="block-5">
         <div class="block-5_container">
             <div>
-                <h4>Не раджу затягувати <br> <span>з застудою</span></h4>
+                <h4>Не советую затягивать<br> <span>с простудой</span></h4>
                 <div class="underline"></div>
                 <div class="bullet-block">
-                    <h3>Що робити, щоб не доводити застуду до ускладнень?</h3>
+                    <h3>Что делать, чтобы не доводить простуду
+                        до осложнений?</h3>
                     <div class="bullet-block_container">
-                        <p>Не займатися самолікуванням та при перших ознаках хвороби консультуйтесь з лікарем </p>
-                        <p>Постільний режим </p>
-                        <p>Пити багато рідини (вода, чай)</p>
-                        <p>Повноцінний сон </p>
-                        <p>Правильне харчування</p>
+                        <p>Не заниматься самолечением и при первых признаках болезни консультироваться с врачом</p>
+                        <p>Постельный режим</p>
+                        <p>Пить много жидкости (вода, чай)</p>
+                        <p>Полноценный сон</p>
+                        <p>Правильное питание</p>
                         <p>Умкалор</p>
                     </div>
                 </div>
                 <div class="bullet-block">
-                    <h3>Обов'язково зверніться до лікаря, якщо при застуді: </h3>
+                    <h3>Обязательно обратитесь к врачу, если при простуде: </h3>
                     <div class="bullet-block_container">
-                        <p>температура тіла тримається в межах 38,5–39 °C більш як 3 дні, а у дітей молодшого віку — понад 24 годин;</p>
+                        <p>Температура тела держится в пределах 38,5-39 ° C более 3 дней, а у детей младшего возраста - более 24 часов;</p>
 
-                        <p>кашель супроводжується хрипами і задишкою; </p>
+                        <p>Кашель сопровождается хрипами и одышкой;</p>
 
-                        <p>кашель, який триває понад 2 тижні; </p>
+                        <p>Кашель, который длится более 2 недель;</p>
 
-                        <p>сильний біль у голові, очах, навколоносових пазухах, животі, грудній клітці на вдиху; </p>
+                        <p>Сильная головная боль, боль в глазах, околоносовых пазухах, животе, грудной клетке на вдохе;</p>
 
-                        <p>мокротиння зеленого, іржавого кольору, з домішками крові; </p>
+                        <p>Мокроты зеленого, ржавого цвета, с примесью крови;</p>
 
-                        <p>з'явився наліт на мигдаликах; </p>
+                        <p>Появился налет на миндалинах;</p>
 
-                        <p>виник висип на шкірі. </p>
+                        <p>Возникла сыпь на коже.</p>
                     </div>
                 </div>
             </div>
@@ -255,17 +256,17 @@
         <div class="map-text">
             <div class="map-text_right">
                 <div class="upperline"></div>
-                <h4><span>Умкалор завжди можна знайти в аптеці поблизу, а я бажаю Вам здоров’я. Живіть легко!</span></h4>
+                <h4><span>Умкалор всегда можно найти в аптеке поблизости, а я желаю Вам здоровья. Живите легко!</span></h4>
                 <div class="underline"></div>
             </div>
             <!-- <div id="comp_wgt" data-drug="11719,99452,316972,316977,316978" data-lang="ru" data-url="https://compendium.com.ua/info/11093/umkalor/" data-proj="умкалор" style="border-color: #BF1985; width: 80%;"><div class="title" style="background: #BF1985;"><a href="https://compendium.com.ua/info/11093/umkalor/" title="УМКАЛОР®, DHU" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script> -->
 
-            <p><span>Доказова база</span><br>
+            <p><span>Доказательная база</span><br>
                 1. Timmer A. et al. Pelargonium sidoides for acute respiratory tract infections: Cochrane Database of Systematic Reviews (2008, July).<br>
                 2. Ильенко Л. И., Парфенова О. Н., Сырьева Т. Н., Гаращенко Т. И. Опыт применения препарата умкалор при заболеваниях ЛОР-органов у детей // Актуальные вопросы отоларингологии детского возраста и фармакотерапии болезней ЛОР-органов. Сб. науч. тр. — М., 2001. — С. 297–305.<br>
                 3. Agbabiaka T. B. et al. Pelargonium sidoides for acute bronchitis: A systematic review and meta-analysis (2008, May).<br>
 
-                * Аватар сайту. Всі персонажі і події вигадані, а збіг з реальним життям випадковий.</p>
+                * Аватар сайта. Все персонажи и события вымышлены, а совпадения с реальной жизнью случайны</p>
         </div>
     <div class="disclamer-tra__inner">
         <div class="logo-block">
