--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -112,7 +112,7 @@
     <div class="block-3">
         <div class="block-3_container">
             <div>
-                <h4>Моє ім’я Лора*<br> і я відкрию Вам <span>світ УМКАЛОРа</span></h4>
+                <h4>Моє ім’я Лора*<br>і я відкрию Вам <span>світ УМКАЛОРа</span></h4>
                 <div class="underline"></div>
                 <p>Я щаслива жінка, дружина та мати. Якщо хтось у сім’ї захворів, то до кого всі звертаються?</p>
                 <p>Обираю завжди все натуральне, перевірене часом та клінічними дослідженнями. Тому спершу детально все аналізую та прискіпливо вивчаю.  </p>
@@ -168,11 +168,11 @@
         <div class="dosage">
             <div class="product-img"></div>
             <div class="dosage-inform">
-                <div class="dosage_container"> 
-                    <div class="dosage_container-img"></div>
-                    <div>
-                        <span>дітям віком від 1 до 6 років:</span>
-                        <p class="dosage_container-text1">по 10 крапель 3 рази на добу;</p>
+				<div class="dosage_container"> 
+					<div class="dosage_container-img"></div>
+					<div>
+						<span>дітям віком від 1 до 6 років:</span>
+						<p class="dosage_container-text1">по 10 крапель 3 рази на добу;</p>
                     </div>
                 </div>
                 <div class="dosage_container">
@@ -258,14 +258,16 @@
                 <h4><span>Умкалор завжди можна знайти в аптеці поблизу, а я бажаю Вам здоров’я. Живіть легко!</span></h4>
                 <div class="underline"></div>
             </div>
-            <!-- <div id="comp_wgt" data-drug="11719,99452,316972,316977,316978" data-lang="ru" data-url="https://compendium.com.ua/info/11093/umkalor/" data-proj="умкалор" style="border-color: #BF1985; width: 80%;"><div class="title" style="background: #BF1985;"><a href="https://compendium.com.ua/info/11093/umkalor/" title="УМКАЛОР®, DHU" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script> -->
+            <div id="comp_wgt" data-drug="11719,99452,316972,316977,316978" data-lang="ru" data-url="https://compendium.com.ua/info/11093/umkalor/" data-proj="умкалор" style="border-color: #BF1985; width: 80%;"><div class="title" style="background: #BF1985;"><a href="https://compendium.com.ua/info/11093/umkalor/" title="УМКАЛОР®, DHU" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
 
-            <p><span>Доказова база</span><br>
+            <p>
+            	<span>Доказова база</span><br>
                 1. Timmer A. et al. Pelargonium sidoides for acute respiratory tract infections: Cochrane Database of Systematic Reviews (2008, July).<br>
                 2. Ильенко Л. И., Парфенова О. Н., Сырьева Т. Н., Гаращенко Т. И. Опыт применения препарата умкалор при заболеваниях ЛОР-органов у детей // Актуальные вопросы отоларингологии детского возраста и фармакотерапии болезней ЛОР-органов. Сб. науч. тр. — М., 2001. — С. 297–305.<br>
                 3. Agbabiaka T. B. et al. Pelargonium sidoides for acute bronchitis: A systematic review and meta-analysis (2008, May).<br>
 
-                * Аватар сайту. Всі персонажі і події вигадані, а збіг з реальним життям випадковий.</p>
+                * Аватар сайту. Всі персонажі і події вигадані, а збіг з реальним життям випадковий.
+            </p>
         </div>
     <div class="disclamer-tra__inner">
         <div class="logo-block">
