--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -168,7 +168,7 @@
         <div class="dosage">
             <div class="product-img"></div>
             <div class="dosage-inform">
-                <div class="dosage_container">
+                <div class="dosage_container dosage_container1">
                     <div class="dosage_container-img"></div>
                     <div>
                         <span>дітям віком від 1 до 6 років:</span>
