--- a/umkalor/index-ru.html
+++ b/umkalor/index-ru.html
@@ -168,7 +168,7 @@
         <div class="dosage">
             <div class="product-img"></div>
             <div class="dosage-inform">
-                <div class="dosage_container">
+                <div class="dosage_container dosage_container1">
                     <div class="dosage_container-img"></div>
                     <div>
                         <span>детям в возрасте от 1 до 6 лет:</span>
