--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -154,7 +154,7 @@
         </div>
         <h3>Як приймати Умкалор? </h3>
         <div class="btns-container">
-            <div class="btn-prep btn-prep-1 active-prep">
+            <div class="btn-prep btn-prep-1 active-prep1">
                 <p>КАПЛИ</p>
             </div>
             <div class="btn-prep btn-prep-2">
