--- a/umkalor/index.html
+++ b/umkalor/index.html
@@ -77,7 +77,7 @@
 
     <div class="block-1">
         <div class="block-1_container">
-            <div class='block-1_center-img'></div>
+            <div class='block-1_center-img block-1_center-imgUA'></div>
             <div class='block-1_center-container'>
                 <div class='block-1_center-image-top'></div>
                 <div class='block-1_center-image-bottom'></div>
