--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 			<a href="prospan-by/index.html">prospan-by</a>
 			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
 			<a href="umkalor/index.html">umkalor</a>
+			<a href="prospan-int/index.html">prospan-int</a>
 			
 		</section>
 	</main>
@@ -224,6 +225,9 @@
 	}
 	a:nth-child(45)::before {
 		background: url("./umkalor/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(46)::before {
+		background: url("./prospan-int/logo.svg")no-repeat center / contain;
 	}
 </style>
 
