--- a/prospan-int/index.html
+++ b/prospan-int/index.html
@@ -336,8 +336,7 @@
 
 
 <div class="map-container">
-    <div id="comp_wgt" data-drug="60633,40829,287745,112801,153263,307051" data-lang="ru" data-url="https://compendium.com.ua/info/168012/prospan-sup-sup-/" data-proj="проспан" style="border-color: rgb(251, 187, 1); width: 80%;"><div class="title" style="background: rgb(251, 187, 1);"><a href="https://compendium.com.ua/info/168012/prospan-sup-sup-/" title="ПРОСПАН®, Engelhard Arzneimittel" class="logo"><img src="https://compendium.com.ua/widget/compendium_ru.svg"></a><a href="https://compendium.com.ua/cart/" class="cart"><img src="https://compendium.com.ua/widget/cart.svg"><span id="comp_cnt" class="badge">0</span></a></div><ul role="tablist" class="nav nav-tabs"><li class="nav-item active"><a href="#comp_map" aria-controls="comp_map" role="tab" data-toggle="tab" class="nav-link active"><span>Карта</span></a></li><li class="nav-item"><a href="#comp_lst" aria-controls="comp_lst" role="tab" data-toggle="tab" class="nav-link">В аптеку</a></li><li class="nav-item"><a href="#comp_crt" aria-controls="comp_crt" role="tab" data-toggle="tab" class="nav-link"><span>Корзина</span></a></li></ul><div class="tab-content"><div id="comp_inf" class="tab-pane" style="height: 342px;"></div><div id="comp_map" class="tab-pane active" style="height: 342px;"></div><div id="comp_lst" class="tab-pane" style="height: 342px;"></div><div id="comp_crt" class="tab-pane" style="height: 342px;"></div></div></div><link rel="stylesheet" href="https://geowidget.morion.ua/css/style.css" type="text/css" media="all"/><link rel="stylesheet" href="https://compendium.com.ua/widget/widget.css" type="text/css" media="all"/><script src="https://compendium.com.ua/widget/widget.js" defer></script>
-    </div>
+	<div class="block-7__img">
 </div>
 
 <div class="disclamer-container">
