--- a/Klimaktoplan-kz/index-ru.html
+++ b/Klimaktoplan-kz/index-ru.html
@@ -179,9 +179,9 @@ E-mail: info.kazakhstan@alpenpharma.com<br>
     </p>
     <a  class="disclamer__alpen" href="http://alpenpharma.com"></a>
   </div>
-<!--   <div class="disclamer-warning">
+  <div class="disclamer-warning">
     <p>САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ВРЕДНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ</p>
-  </div> -->
+  </div>
 
 
 
