--- a/Tansilotren-AZ/index.html
+++ b/Tansilotren-AZ/index.html
@@ -21,7 +21,7 @@
                 <a class="navmenu" href="#block-2">Qəbul qaydası</a>
                 <a class="navmenu" href="#block-3">Faydalı məlumatlar</a>
                 <a class=" where-to-buy" href="#block-4">Harada satılır</a>
-<!--                <a class="lang" href="index-en.html">en</a>-->
+                <a class="lang" href="index-ru.html">ru</a>
             </div>
 
             <!--        mobile menu-->
@@ -43,7 +43,7 @@
 <!--                            <a class=" where-to-buy" href="#block-4">ГДЕ КУПИТЬ</a>-->
 <!--                        </li>-->
                         <li>
-<!--                            <a class="lang" href="index-en.html">en</a>-->
+                            <a class="lang" href="index-ru.html">ru</a>
                         </li>
                     </ul>
                 </div>
@@ -552,7 +552,7 @@
               
                 <a target="_blank" href="https://www.ozonaptek.az/"></a>
                 <a target="_blank" href="https://www.melhem.az/"></a>
-              </div>
+        </div>
         <div class="map-text">
             <h3>Sübut bazası</h3>
             <ol>
