--- a/Tansilotren-AZ/index-ru.html
+++ b/Tansilotren-AZ/index-ru.html
@@ -54,7 +54,9 @@
         </div>
     </div>
 
-<a class="instruction" href="./instruction.pdf"></a>
+<a class="instruction" href="./instruction.pdf">
+    <p class="translated-text" key="instruction">Инструкция</p>
+</a>
 
 <!--    end navigation-->
 
@@ -164,7 +166,7 @@
                 </button>
                 <div class="popup__body">
                     <div class="popup__message">
-                        <p><b>Дети от 2 до 6 лет </b></p>
+                        <p><b>Дети от 3 до 6 лет </b></p>
 
                         <p><b>При острых состояниях и при дальнейшем лечении или при хронических состояниях: </b> по 1 табл. 3 раза в сутки.</p>
 
@@ -587,7 +589,7 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>САМОЛІКУВАННЯ МОЖЕ БУТИ<br>ШКІДЛИВИМ ДЛЯ ВАШОГО ЗДОРОВ'Я</p>
+        <p>ÖZÜNÜMÜALİCƏ SAĞLAMLIĞINIZ ÜÇÜN TƏHLÜKƏ TÖRƏDƏ BİLƏR</p>
     </div>
 </div>
 
