--- a/Tansilotren-AZ/index.html
+++ b/Tansilotren-AZ/index.html
@@ -567,18 +567,27 @@
     </div>
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
+            <p>
+              "Alpen Pharma AG"-nin Azərbaycan Respublikasındaki Nümayəndəliyi
+              <br>
+              Ünvan : Bakı şəhəri, Tbilisi prosp. 49/C, Chirag Plaza Hotel & Business Centre, AZ 1065,
+              <br>
+              Tel.: +994 12 499 72 71
+              <br>
+              www.alpenpharma.az
+            </p>
 
 
 
             <div class="logos-container">
-                <a class="disclamer-tra__logo" href=""><p></p></a>
-                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p></p></a>
+                <a class="disclamer-tra__logo" href=""><p><b>İstehsalçı:</b><br>DHU<br>https://www.dhu.de/</p></a>
+                <a class="disclamer-tra__alpen" href="http://alpenpharma.com"><p><b>İdxalçı:</b><br> Alpen Pharma AG<br>www.alpenpharma.az</p></a>
             </div>
         </div>
     </div>
 
     <div class="disclamer-warning">
-        <p>ÖZÜNÜMÜALİCƏ SAĞLAMLIĞINIZ ÜÇÜN TƏHLÜKƏ TÖRƏDƏ BİLƏR</p>
+        <p>Əks göstərişlər mövcuddur, istifadə etməzdən əvvəl həkim ilə məsləhətləşin</p>
     </div>
 </div>
 
