--- a/Tansilotren-AZ/index-ru.html
+++ b/Tansilotren-AZ/index-ru.html
@@ -578,6 +578,15 @@
     </div>
     <div class="disclamer-tra__inner">
         <div class="disclamer-tra">
+            <p>
+              "Alpen Pharma AG"-nin Azərbaycan Respublikasındaki Nümayəndəliyi
+              <br>
+              Ünvan : Bakı şəhəri, Tbilisi prosp. 49/C, Chirag Plaza Hotel & Business Centre, AZ 1065,
+              <br>
+              Tel.: +994 12 499 72 71
+              <br>
+              www.alpenpharma.az
+            </p>
 
 
 
@@ -589,7 +598,7 @@
     </div>
 
     <div class="disclamer-warning">
-        <p>ÖZÜNÜMÜALİCƏ SAĞLAMLIĞINIZ ÜÇÜN TƏHLÜKƏ TÖRƏDƏ BİLƏR</p>
+        <p>Əks göstərişlər mövcuddur, istifadə etməzdən əvvəl həkim ilə məsləhətləşin</p>
     </div>
 </div>
 
