--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
 			<a href="umkalor/index.html">umkalor</a>
 			<a href="prospan-int/index.html">prospan-int</a>
+			<a href="Cinabsin/index.html">Cinabsin</a>
 			
 		</section>
 	</main>
@@ -228,6 +229,9 @@
 	}
 	a:nth-child(46)::before {
 		background: url("./prospan-int/logo.svg")no-repeat center / contain;
+	}
+	a:nth-child(47)::before {
+		background: url("./Cinabsin/logo.svg")no-repeat center / contain;
 	}
 </style>
 
