--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -105,7 +105,7 @@
             flex-wrap: wrap;
         }
         .disclamer {
-            font-size: 40px;
+            font-size: 20px;
         }
         .main-text {
             padding-left: 10px;
@@ -315,9 +315,7 @@
 
     </div>
 </div>
-<div style="position: absolute;height: 100vh;margin-top: -10vh;" >
-    <a name="block-3"></a>
-</div>
+
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-between; max-width: 1200px; margin: auto;">
         <div class="paz-mob" style="height: 350px;  background-image: url('./images/pazuhi.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
@@ -347,6 +345,9 @@
 
         </div>
     </div>
+</div>
+<div style="position: absolute;height: 100vh;margin-top: -10vh;" >
+    <a name="block-3"></a>
 </div>
 <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Как принимать <span style="font-weight: bold;">Циннабсин</span></p>
 <div style="width: 100vw; margin: 50px 0;">
@@ -507,10 +508,10 @@
 <p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
-        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"></div>
-        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"></div>
-        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"></div>
-        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"></div>
+        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"><p>аптека 1</p></div>
+        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"><p>аптека 2</p></div>
+        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"><p>аптека 3</p></div>
+        <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;"><p>аптека 4</p></div>
     </div>
 </div>
 <div class="disc-mob-back" style=" padding: 50px 10px;background-color: #f8f9fa;">
