--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -554,7 +554,7 @@
             <div style="width: 65px;height: 55px;background-image: url('./images/logo-af.png');margin-left: 25px; background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
         </div>
     </div>
-    <p class="disclamer" style="">Самолікування може бути шкідливим для вашого здоров'я</p>
+    <p class="disclamer" style="">САМОЛЕЧЕНИЕ МОЖЕТ БЫТЬ ОПАСНЫМ ДЛЯ ВАШЕГО ЗДОРОВЬЯ </p>
 </div>
 </body>
 </html>
