--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -15,7 +15,8 @@
   <meta name="viewport" content="width=device-width">
     <style amp-boilerplate>
         .disclamer {
-            font-size: 128px; text-align: center; font-family: sans-serif; font-weight: lighter;
+            font-size: 108px; text-align: center; font-family: sans-serif; font-weight: lighter;
+            margin: 0;
         }
         .pill{
             width: 33px;
