--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -15,7 +15,7 @@
   <meta name="viewport" content="width=device-width">
     <style amp-boilerplate>
         .disclamer {
-            font-size: 108px; text-align: center; font-family: sans-serif; font-weight: lighter;
+            font-size: 60px; color: rgb(108,117,125); text-align: center; font-family: sans-serif; font-weight: lighter;
             margin: 0;
         }
         .pill{
@@ -92,7 +92,7 @@
             position: relative; top: -70px; left: 25px; font-family: sans-serif;
         }
         .comp-4-p {
-            position: relative; top: -70px; left: 25px; font-family: sans-serif;
+            position: relative; top: -70px; left: 70px; font-family: sans-serif;
         }
 
         @media screen and (max-width: 768px)
@@ -199,6 +199,9 @@
             .comp-5 {
                 position: initial;margin: 20px;margin-top: 80px;right: 90px; top: 130px;border: 2px solid rgb(139, 139, 139);border-radius: 50%;height: 135px; width: 135px; background-image: url('./images/calium.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;
             }
+            .comp-4-p {
+                 top:-95px; left: 25px;
+            }
     }
 
     html {scroll-behavior: smooth;} a{ margin-right: 10px; text-decoration: none;color:black; } body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
@@ -208,7 +211,7 @@
     <a name="block-0"></a>
     <nav style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
         <ul>
-            <li>        <a href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">ЦИНАБСИН</a>
+            <li>        <a href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">ЦИННАБСИН</a>
             </li>
         </ul>
         <ul style="cursor: pointer; font-family: sans-serif; color: rgba(0,0,0,.5);">
@@ -274,11 +277,11 @@
 
 <div class="comp-4-mob" style="">
     <div class="comp-column" style="display: flex; justify-content: center; max-width: 1200px; margin: auto;">
-        <div class="comp-1" style=""><p class="comp-1-p" style=""><strong>Циннабарис</strong><br>(Cinnabaris)</p></div>
+        <div class="comp-1" style=""><p class="comp-1-p" style=""><strong>Гидрастис</strong><br>(Hydrastis)</p></div>
         <div class="comp-2" style=""><p class="comp-2-p" style=""><strong>Циннабарис</strong><br>(Cinnabaris)</p></div>
         <div class="comp-3" style=""></div>
-        <div class="comp-4" style=""><p class="comp-3-p" style=""><strong>Циннабарис</strong><br>(Cinnabaris)</p></div>
-        <div class="comp-5" style=""><p class="comp-4-p" style=""><strong>Циннабарис</strong><br>(Cinnabaris)</p></div>
+        <div class="comp-4" style=""><p class="comp-3-p" style=""><strong>Эхинацея</strong><br>(Echinacea)</p></div>
+        <div class="comp-5" style=""><p class="comp-4-p" style=""><strong>Калиум бихромикум</strong><br>(Kalium bichromicum)</p></div>
     </div>
 </div>
 
@@ -362,7 +365,7 @@
             <div class="how-width" style="display: flex; flex-direction: column; align-items: center; padding: 20px; border-radius: 5px;">
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/26.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Детям от 2 до 5 лет</strong>
-                <p style="font-family: sans-serif;text-align: center;">
+                <p style="font-family: sans-serif;text-align: center;height: 105px;">
                     при острых состояниях – рассасывать по 1 таблетке 3 раза в сутки до
                     улучшения состояния. При дальнейшем лечении продолжать принимать по 1
                     таблетке 3 раза в
@@ -402,7 +405,7 @@
             <div  class="how-width" style="display: flex; flex-direction: column; align-items: center; padding: 20px; border-radius: 5px;">
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/611.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Детям с 6 до 11 лет</strong>
-                <p style="font-family: sans-serif;text-align: center;">
+                <p style="font-family: sans-serif;text-align: center;height: 105px;">
                     При острых состояниях – рассасывать по 1 таблетке через каждые 2 часа (но
                     не более 6 таблеток в сутки) до улучшения состояния. При дальнейшем лечении
                     принимать по 1
@@ -447,7 +450,7 @@
             <div class="how-width" style="display: flex; flex-direction: column; align-items: center; padding: 20px; border-radius: 5px;">
                 <div style="width:114px;height: 114px;margin-bottom: 20px;background-image: url('./images/12.jpg'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
                 <strong style="color: #e98300;margin-bottom: 20px; font-family: sans-serif; font-weight: bolder;">Взрослым и детям с 12 лет</strong>
-                <p style="font-family: sans-serif;text-align: center;">
+                <p style="font-family: sans-serif;text-align: center;height: 105px;">
                     При острых состояниях – рассасывать по 1 таблетке каждый час (но не
                     более 12 таблеток в сутки) до улучшения состояния. При дальнейшем лечении
                     принимать по 1-2
@@ -533,7 +536,6 @@
             <div style="line-height: 22px;">
                 <p style="margin: 0;">Изготовитель</p>
                 <p style="margin: 0;">DHU (Германия)</p>
-                <a style="margin: 0;" href="https://www.dhu.de/" target="_blank">www.dhu.de</a>
             </div>
         </div>
         <div class="disc-width-center" style="">
