--- a/Cinabsin/index-en.html
+++ b/Cinabsin/index-en.html
@@ -116,6 +116,10 @@
             z-index: 2;
         }
 
+        .menu-li {
+            margin-bottom: 15px;
+        }
+
         @media screen and (max-width: 768px)
     {.media {
         flex-direction: column-reverse;
@@ -249,22 +253,22 @@
     </div>
 
 
-    <amp-sidebar id="sidebar"   side="right" style="height: 100px; width: 100vw; font-family: sans-serif; padding: 40px;">
+    <amp-sidebar id="sidebar"   side="right" style="height: 170px; width: 100vw; font-family: sans-serif; padding: 40px;">
             <section>
                 <ul style="list-style: none;padding: 0;">
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-1" role="button">COMPOSITION </a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-2" role="button">EFFECT </a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-3" role="button">HOW TO USE</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-4" role="button">WHERE TO BUY</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="./index.html" role="button">ru</a>
                     </li>
                 </ul>
