--- a/Cinabsin/index.html
+++ b/Cinabsin/index.html
@@ -115,6 +115,9 @@
             width: 100vw;
             z-index: 2;
         }
+        .menu-li {
+            margin-bottom: 15px;
+        }
 
         @media screen and (max-width: 768px)
     {.media {
@@ -249,22 +252,22 @@
     </div>
 
 
-    <amp-sidebar id="sidebar"   side="right" style="height: 100px; width: 100vw; font-family: sans-serif; padding: 40px;">
+    <amp-sidebar id="sidebar"   side="right" style="height: 170px; width: 100vw; font-family: sans-serif; padding: 40px;">
             <section>
                 <ul style="list-style: none;padding: 0;">
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-1" role="button">Состав</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-2" role="button">Действие</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-3" role="button">Как принимать</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="#block-4" role="button">Где купить</a>
                     </li>
-                    <li>
+                    <li class="menu-li">
                         <a  href="./index-en.html" role="button">en</a>
                     </li>
                 </ul>
