--- a/Cinabsin/index-en.html
+++ b/Cinabsin/index-en.html
@@ -244,7 +244,7 @@
 <div class="mobile-menu">
     <div class="header">
 
-        <span href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">Cinnabsin</span>
+        <span href="#block-0" style="text-transform: uppercase; cursor: pointer; font-family: sans-serif; font-weight: bold;">Cinnabsin</span>
         <button on="tap:sidebar.toggle" class="headerMenu" style="width: 20px; height: 20px;margin-right: 10px; border: none; background-image: url('./images/1.svg')">
 
         </button>
