--- a/Cinabsin/index-en.html
+++ b/Cinabsin/index-en.html
@@ -586,7 +586,7 @@
 <div style="position: absolute;height: 100vh;margin-top: -10vh;" >
     <a name="block-4"></a>
 </div>
-<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">Где купить</p>
+<p style="max-width: 1200px; margin: auto; font-size: 25px; text-align: center; font-family: sans-serif;">WHERE TO BUY</p>
 <div style="width: 100vw; margin: 50px 0;">
     <div class="media-column" style="display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto; align-items: center">
         <div style="width: 200px; height: 100px;border-radius: 10px;box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);margin-bottom: 20px;background-image: url('./images/logo-social.png'); background-position: center;background-size: cover; background-repeat: no-repeat;"></div>
@@ -615,15 +615,15 @@
             </div>
         </div>
         <div class="disc-width-center" style="">
-            <p>Реклама лекарственного препарата. Перед применением ознакомьтесь с инструкцией по применению
-                и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Циннабсин
-                №UA/6790/01/01 от 09.08.2017
-            </p>
-            <p>
-                Поставщик «Альпен Фарма АГ» (Швейцария). Производитель - DHU (Германия)
-                www.dhu.de Эксклюзивный дистрибьютор - Фармацевтическая компания ЧАО «Натурфарм», г. Киев,
-                Пуща-Водица, ул. Лесная, 30а, тел.: +38 (044) 303 91 10 www.naturpharma.ua
-            </p>
+<!--            <p>Реклама лекарственного препарата. Перед применением ознакомьтесь с инструкцией по применению-->
+<!--                и проконсультируйтесь с врачом. Хранить в недоступном для детей месте. Циннабсин-->
+<!--                №UA/6790/01/01 от 09.08.2017-->
+<!--            </p>-->
+<!--            <p>-->
+<!--                Поставщик «Альпен Фарма АГ» (Швейцария). Производитель - DHU (Германия)-->
+<!--                www.dhu.de Эксклюзивный дистрибьютор - Фармацевтическая компания ЧАО «Натурфарм», г. Киев,-->
+<!--                Пуща-Водица, ул. Лесная, 30а, тел.: +38 (044) 303 91 10 www.naturpharma.ua-->
+<!--            </p>-->
         </div>
         <div class="disc-width" style="display: flex; justify-content: flex-end; align-items: center;">
             <div style="line-height: 22px;">
