--- a/Cinabsin/index-en.html
+++ b/Cinabsin/index-en.html
@@ -308,7 +308,7 @@
     <a name="block-0"></a>
     <nav style="box-shadow: 0 .5rem 1rem rgba(0,0,0,.15);width: 100%; padding: 10px; position: fixed;display: flex; width: 100%; justify-content: space-between; align-items: center;">
         <ul>
-            <li>        <a href="#block-0" style="cursor: pointer; font-family: sans-serif; font-weight: bold;">Cinnabsin</a>
+            <li>        <a href="#block-0" style="text-transform: uppercase;cursor: pointer; font-family: sans-serif; font-weight: bold;">Cinnabsin</a>
             </li>
         </ul>
         <ul style="cursor: pointer; font-family: sans-serif; color: rgba(0,0,0,.5);">
