--- a/Cinabsin/index-en.html
+++ b/Cinabsin/index-en.html
@@ -2,7 +2,7 @@
 <html ⚡>
 <head>
   <meta charset="utf-8">
-  <title>Cinabsin</title>
+  <title>Cinnabsin</title>
   <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <script async custom-element="amp-sidebar" src="https://cdn.ampproject.org/v0/amp-sidebar-0.1.js"></script>
@@ -119,6 +119,9 @@
         .menu-li {
             margin-bottom: 15px;
         }
+        .res-top {
+             margin: 40px 0 200px;
+        }
 
         @media screen and (max-width: 1024px)
     {.media {
@@ -127,11 +130,14 @@
         .media-column {
             flex-direction: column;
         }
+        .res-top {
+             margin: 40px 0 100px;
+        }
         .media-wrap {
             flex-wrap: wrap;
         }
         .disclamer {
-            font-size: 20px;
+            font-size: 20px; font-weight: bolder;
         }
             .mobile-menu {
                 height: 40px;
@@ -139,14 +145,14 @@
                 padding-top: 10px;
             }
         .main-text {
-            padding-left: 10px;
+            padding-left: 40px;
             font-size: 21px;
             position: initial;
         }
         .pack {
             height: 290px;
             width: 170px;
-            margin-left: 30px;
+            margin-left: 40px;
             background-size: contain;
         }
         .shma {
@@ -345,7 +351,7 @@
         </ul>
     </div>
 </div>
-<div style="width: 100vw; margin: 40px 0 200px;">
+<div class="res-top" style="">
     <div style="position: relative; display: flex; justify-content: space-evenly; max-width: 1200px; margin: auto;" class="media-wrap">
         <div class="plate-el" style="height: 114px; width: 114px; background-image: url('./images/de.png'); background-position: center;background-size: cover; background-repeat: no-repeat;">
             <p style="position:relative;top: 120px; font-size: 16px;text-align: center; font-family: sans-serif;">Made in Germany</p>
