--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<a href="Klimaktoplan-kz/index.html">Klimaktoplan-kz</a>
 			<a href="umkalor/index.html">umkalor</a>
 			<a href="prospan-int/index.html">prospan-int</a>
-			<a href="Cinabsin/index.html">Cinabsin</a>
+			<a href="Cinnabsin/index.html">Cinnabsin</a>
 			
 		</section>
 	</main>
@@ -231,7 +231,7 @@
 		background: url("./prospan-int/logo.svg")no-repeat center / contain;
 	}
 	a:nth-child(47)::before {
-		background: url("./Cinabsin/logo.svg")no-repeat center / contain;
+		background: url("./Cinnabsin/logo.svg")no-repeat center / contain;
 	}
 </style>
 
